Fixed layout problems

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -75,6 +75,13 @@ video::-webkit-media-controls {
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .calculator-card{
+    min-height: 600px;
+  }
+}
+
+
 .cd-hero {
   z-index: 2;
   position: relative;
